# serializer version: 1
# name: test_sensor[sensor.warszawa_humidity-entry]
  dict({
    'config_subentry_id': None,
    'disabled_by': None,
    'entity_category': None,
    'entity_id': 'sensor.warszawa_humidity',
    'has_entity_name': True,
    'icon': None,
    'name': None,
    'options': ReadOnlyDict({
      'sensor': ReadOnlyDict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_name': 'Humidity',
    'platform': 'meteo_imgw_pib',
    'translation_key': None,
    'unique_id': '12200_humidity',
  })
# ---
# name: test_sensor[sensor.warszawa_humidity-state]
  dict({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.ATTRIBUTION: 'attribution'>: 'Data provided by IMGW-PIB',
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'humidity',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Warszawa Humidity',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfRatio.PERCENTAGE: '%'>,
    }),
    'entity_id': 'sensor.warszawa_humidity',
    'state': '88',
  })
# ---
# name: test_sensor[sensor.warszawa_precipitation-entry]
  dict({
    'config_subentry_id': None,
    'disabled_by': None,
    'entity_category': None,
    'entity_id': 'sensor.warszawa_precipitation',
    'has_entity_name': True,
    'icon': None,
    'name': None,
    'options': ReadOnlyDict({
      'sensor': ReadOnlyDict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_name': 'Precipitation',
    'platform': 'meteo_imgw_pib',
    'translation_key': None,
    'unique_id': '12200_precipitation',
  })
# ---
# name: test_sensor[sensor.warszawa_precipitation-state]
  dict({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.ATTRIBUTION: 'attribution'>: 'Data provided by IMGW-PIB',
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'precipitation',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Warszawa Precipitation',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfLength.MILLIMETERS: 'mm'>,
    }),
    'entity_id': 'sensor.warszawa_precipitation',
    'state': '5',
  })
# ---
# name: test_sensor[sensor.warszawa_pressure-entry]
  dict({
    'config_subentry_id': None,
    'disabled_by': None,
    'entity_category': None,
    'entity_id': 'sensor.warszawa_pressure',
    'has_entity_name': True,
    'icon': None,
    'name': None,
    'options': ReadOnlyDict({
      'sensor': ReadOnlyDict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_name': 'Pressure',
    'platform': 'meteo_imgw_pib',
    'translation_key': None,
    'unique_id': '12200_pressure',
  })
# ---
# name: test_sensor[sensor.warszawa_pressure-state]
  dict({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.ATTRIBUTION: 'attribution'>: 'Data provided by IMGW-PIB',
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'pressure',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Warszawa Pressure',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfPressure.HPA: 'hPa'>,
    }),
    'entity_id': 'sensor.warszawa_pressure',
    'state': '1002',
  })
# ---
# name: test_sensor[sensor.warszawa_temperature-entry]
  dict({
    'config_subentry_id': None,
    'disabled_by': None,
    'entity_category': None,
    'entity_id': 'sensor.warszawa_temperature',
    'has_entity_name': True,
    'icon': None,
    'name': None,
    'options': ReadOnlyDict({
      'sensor': ReadOnlyDict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_name': 'Temperature',
    'platform': 'meteo_imgw_pib',
    'translation_key': None,
    'unique_id': '12200_temperature',
  })
# ---
# name: test_sensor[sensor.warszawa_temperature-state]
  dict({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.ATTRIBUTION: 'attribution'>: 'Data provided by IMGW-PIB',
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Warszawa Temperature',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'entity_id': 'sensor.warszawa_temperature',
    'state': '12.5',
  })
# ---
# name: test_sensor[sensor.warszawa_weather_alert-entry]
  dict({
    'config_subentry_id': None,
    'disabled_by': None,
    'entity_category': None,
    'entity_id': 'sensor.warszawa_weather_alert',
    'has_entity_name': True,
    'icon': None,
    'name': None,
    'options': ReadOnlyDict({
    }),
    'original_name': 'Weather alert',
    'platform': 'meteo_imgw_pib',
    'translation_key': 'weather_alert',
    'unique_id': '12200_weather_alert',
  })
# ---
# name: test_sensor[sensor.warszawa_weather_alert-state]
  dict({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.ATTRIBUTION: 'attribution'>: 'Data provided by IMGW-PIB',
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'enum',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Warszawa Weather alert',
      'level': 'yellow',
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'no_alert',
        'storms',
        'dense_fog',
        'heavy_rainfall',
        'heavy_snowfall',
        'icing',
        'freezing_rain',
        'snowfall',
        'frosts',
        'thaw',
        'heavy_rain_with_storms',
        'heavy_frost',
        'strong_wind',
        'heat',
        'snow_blizzard',
      ]),
      'probability': 80,
      'valid_from': datetime.datetime(2025, 7, 11, 14, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Warsaw')),
      'valid_to': datetime.datetime(2025, 7, 11, 22, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Warsaw')),
    }),
    'entity_id': 'sensor.warszawa_weather_alert',
    'state': 'strong_wind',
  })
# ---
# name: test_sensor[sensor.warszawa_wind_direction-entry]
  dict({
    'config_subentry_id': None,
    'disabled_by': None,
    'entity_category': None,
    'entity_id': 'sensor.warszawa_wind_direction',
    'has_entity_name': True,
    'icon': None,
    'name': None,
    'options': ReadOnlyDict({
      'sensor': ReadOnlyDict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_name': 'Wind direction',
    'platform': 'meteo_imgw_pib',
    'translation_key': 'wind_direction',
    'unique_id': '12200_wind_direction',
  })
# ---
# name: test_sensor[sensor.warszawa_wind_direction-state]
  dict({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.ATTRIBUTION: 'attribution'>: 'Data provided by IMGW-PIB',
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'wind_direction',
      'direction_name': 'nne',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Warszawa Wind direction',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT_ANGLE: 'measurement_angle'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '°',
    }),
    'entity_id': 'sensor.warszawa_wind_direction',
    'state': '12',
  })
# ---
# name: test_sensor[sensor.warszawa_wind_speed-entry]
  dict({
    'config_subentry_id': None,
    'disabled_by': None,
    'entity_category': None,
    'entity_id': 'sensor.warszawa_wind_speed',
    'has_entity_name': True,
    'icon': None,
    'name': None,
    'options': ReadOnlyDict({
      'sensor': ReadOnlyDict({
        'suggested_display_precision': 0,
      }),
      'sensor.private': ReadOnlyDict({
        'suggested_unit_of_measurement': <UnitOfSpeed.KILOMETERS_PER_HOUR: 'km/h'>,
      }),
    }),
    'original_name': 'Wind speed',
    'platform': 'meteo_imgw_pib',
    'translation_key': None,
    'unique_id': '12200_wind_speed',
  })
# ---
# name: test_sensor[sensor.warszawa_wind_speed-state]
  dict({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.ATTRIBUTION: 'attribution'>: 'Data provided by IMGW-PIB',
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'wind_speed',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Warszawa Wind speed',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfSpeed.KILOMETERS_PER_HOUR: 'km/h'>,
    }),
    'entity_id': 'sensor.warszawa_wind_speed',
    'state': '14.4',
  })
# ---
